# emerging-plasmoid

./: .gitignore  CMakeLists.txt  Messages.sh  README  README.md  config.ui  emerging.cpp  emerging.h  emergingplasmoid.cpp  emergingplasmoid.h  getcurrent  plasma-applet-emerging.desktop
